--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,13 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-header {
   background-color: #6f96ff;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
+  margin: auto;
+  width: 100%;
+  height: 100vh;
 }
