--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,6 +1,13 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+
+.notosanskr * {
+  font-family: "Noto Sans KR", sans-serif;
+}
+
 .App {
   background-color: #6f96ff;
   margin: auto;
   width: 100%;
   height: 100vh;
+  font-family: "Noto Sans KR", sans-serif;
 }
