--- a/front/src/components/StudentIdPage/FriendsList.css
+++ b/front/src/components/StudentIdPage/FriendsList.css
@@ -30,9 +30,12 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+  font-weight: bold;
 }
-.firendsList {
+.friendsList {
   position: absolute;
+  display: flex;
+  flex-direction: column;
   top: 5%;
   background-color: #c7d6ff;
   width: 100%;
@@ -42,15 +45,16 @@
 }
 
 .friendInfo {
-  width: 96%;
-  height: 30%;
-  background-color: #fff;
-  position: absolute;
-  left: 2%;
-  top: 7%;
-  border-radius: 20px;
 }
 .firendName {
+  position: relative;
+  width: 90%;
+  left: 5%;
+  top: 2%;
   font-size: 0.8rem;
   font-weight: bold;
+}
+.firendName span {
+  position: absolute;
+  right: 0;
 }
