--- a/front/src/App.css
+++ b/front/src/App.css
@@ -26,10 +26,18 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "NanumSquareRound";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumSquareRound.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .App {
   background-color: #6f96ff;
   margin: auto;
   width: 100%;
   height: 100vh;
-  font-family: "NanumSquareNeo-Variable";
+  font-family: "NanumSquareRound";
 }
