--- a/front/src/components/StudentIdPage/StudentId.css
+++ b/front/src/components/StudentIdPage/StudentId.css
@@ -15,5 +15,11 @@
   position: absolute;
   left: 5%;
   font-weight: bold;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+}
+.studentTextInfo {
+  position: relative;
+  left: 5%;
 }
