--- a/front/src/pages/styles/BankLocationPage.css
+++ b/front/src/pages/styles/BankLocationPage.css
@@ -1,3 +1,20 @@
 .mapCard {
   color: white;
 }
+
+.box {
+  background-color: white;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 20px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.bankCard {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
