feat: 각종 페칭데이터 코드 구현

--- a/front/src/components/FxratePage/Kwrate.css
+++ b/front/src/components/FxratePage/Kwrate.css
@@ -19,11 +19,9 @@
   outline: none;
   cursor: pointer;
   transition: 0.2s ease-in-out;
-  box-shadow: 
-  /* -6px -6px 14px rgba(255, 255, 255, 0.7), */
-    /* -6px -6px 10px rgba(255, 255, 255, 0.5), */ 6px
-      6px 8px rgba(255, 255, 255, 0.075),
-    6px 6px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
+    -6px -6px 10px rgba(255, 255, 255, 0.5),
+    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
 }
 button:hover {
   box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
