--- a/front/src/pages/styles/FxratePage.css
+++ b/front/src/pages/styles/FxratePage.css
@@ -3,7 +3,8 @@
   margin-top: 5%;
   padding: 5%;
   border-radius: 20px;
-  background-color: #c6d5ff;
+  /* background-color: #c6d5ff; */
+  background-color: #ebecf0;
 }
 
 .discount-box {
@@ -15,7 +16,7 @@
 
 .fxratepush {
   position: relative;
-  left: 80%;
+  left: 70%;
   background-color: yellow;
   border-radius: 10px;
 }
