--- a/front/src/pages/styles/LoginPage.css
+++ b/front/src/pages/styles/LoginPage.css
@@ -1,3 +1,12 @@
 .Login {
   /* background-color: #ebecf0; */
 }
+
+.logincontainer {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  margin-top: 20%;
+}
