--- a/front/src/pages/styles/LoginPage.scss
+++ b/front/src/pages/styles/LoginPage.scss
@@ -1,11 +1,11 @@
 $ruler: 16px;
 $color-red: #ae1100;
-// $color-bg: #ebecf0;
-$color-bg: #c6d5ff;
-// $color-shadow: #babecc;
-// $color-white: #fff;
-$color-shadow: rgb(155, 160, 177);
-$color-white: #cfdbfb;
+$color-bg: #ebecf0;
+// $color-bg: #c6d5ff;
+$color-shadow: #babecc;
+$color-white: #fff;
+// $color-shadow: rgb(155, 160, 177);
+// $color-white: #cfdbfb;
 
 body,
 html {
