feat: Create AlertPage

--- a/front/src/components/StudentIdPage/RemittanceModal.css
+++ b/front/src/components/StudentIdPage/RemittanceModal.css
@@ -57,7 +57,7 @@
 }
 .remittanceContentTitle {
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: bolder;
   z-index: 3;
   position: absolute;
   left: 30%;
