--- a/front/src/pages/styles/AlertPage.css
+++ b/front/src/pages/styles/AlertPage.css
@@ -1,7 +1,7 @@
 .alertWrapper {
   position: absolute;
   width: 100%;
-  height: 93%;
+  height: 90%;
   padding-top: 5%;
   overflow-y: scroll;
 }
@@ -15,12 +15,26 @@
 }
 .alertBoxWrapper {
   position: absolute;
-  left: 5%;
+  padding-left: 5%;
   /* top: 2%; */
   width: 95%;
   height: 100%;
   line-height: 3rem;
 }
+.alertBoxWrapperDone {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  border-radius: 20px;
+  color: black;
+}
+
+.alertBoxWrapperDone .alertTitle,
+.alertBoxWrapperDone .alertName,
+.alertBoxWrapperDone .alertMoney,
+.alertBoxWrapperDone .alertMoney span {
+  color: black;
+}
+
 .alertName {
   position: absolute;
   left: 45%;
