--- a/front/src/components/StudentIdPage/FriendsList.css
+++ b/front/src/components/StudentIdPage/FriendsList.css
@@ -48,10 +48,10 @@
 .firendName {
   position: relative;
   width: 90%;
-  left: 5%;
+  padding-bottom: 10%;
   top: 5%;
   font-size: 0.8rem;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 .firendName span {
   position: absolute;
