--- a/front/src/components/StudentIdPage/FriendsList.css
+++ b/front/src/components/StudentIdPage/FriendsList.css
@@ -49,7 +49,8 @@
   position: relative;
   width: 90%;
   padding-bottom: 10%;
-  top: 5%;
+  padding-top: 3%;
+  /* top: 10%; */
   font-size: 0.8rem;
   /* font-weight: bold; */
 }
@@ -64,4 +65,7 @@
 }
 .checkBox {
   z-index: 10;
+  position: absolute;
+  right: 5%;
+  padding-top: 2%;
 }
