--- a/front/src/components/StudentIdPage/FriendsList.css
+++ b/front/src/components/StudentIdPage/FriendsList.css
@@ -30,7 +30,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  font-weight: bold;
+  font-size: 0.8rem;
 }
 .friendsList {
   overflow-y: scroll;
