--- a/front/src/components/StudentIdPage/FriendsList.css
+++ b/front/src/components/StudentIdPage/FriendsList.css
@@ -14,8 +14,11 @@
   width: 84%;
   left: 8%;
   height: 5%;
-  display: flex;
-  flex-wrap: nowrap;
+
+  /* Add these lines */
+  display: block;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 .friendsCategory {
   background-color: #c7d6ff;
@@ -32,13 +35,15 @@
   align-items: center;
   z-index: 1;
   font-size: 0.8rem;
+
+  display: inline-block;
 }
 .friendsList {
   overflow-y: scroll;
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 5%;
+  top: 4.5%;
   background-color: #c7d6ff;
   width: 100%;
   height: 95%;
