--- a/front/src/components/FavoritePlacePage/FavoritePlace.css
+++ b/front/src/components/FavoritePlacePage/FavoritePlace.css
@@ -31,5 +31,16 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  line-height: 10%;
+  line-height: normal;
+}
+
+.favoritePlaceContent p {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  margin: 0.2em 0;
+}
+
+.address {
+  font-size: 0.8em; /* Adjust the size as needed */
 }
