--- a/front/src/components/FxratePage/Fxrate.css
+++ b/front/src/components/FxratePage/Fxrate.css
@@ -1,9 +1,37 @@
-.fxrate-box {
+.fxrateBox {
   width: 100%;
-  padding: 2%;
-  border: 1px solid white;
+}
+.fxrateRender {
+  position: relative;
+  text-align: center;
+  border: 0.5rem solid #6f96ff;
   border-radius: 20px;
-  background-color: aliceblue;
+  background-color: #fff;
+  width: 87%;
+  /* color: #fff; */
+  padding: 2%;
+  margin-top: 1rem;
+  /* display: flex; */
+}
+.fxrateRenderTitle {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+/* .fxrateRenderContent {
+  font-size: 1.2rem;
+} */
+.fxrateRenderContent span {
+  font-size: 1.2rem;
+}
+.fxrateRenderResult {
+  color: red;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.fxratePreferential {
+  font-size: 1.1rem;
+  /* color: #fac109; */
+  /* border: #fff solid 0.4rem; */
 }
 
 .datepicker {
@@ -11,8 +39,4 @@
   border-radius: 20px;
   border: none;
   text-align: center;
-  box-shadow: -6px -6px 14px rgba(255, 255, 255, 0.7),
-    -6px -6px 10px rgba(255, 255, 255, 0.5),
-    6px 6px 8px rgba(255, 255, 255, 0.075), 6px 6px 10px rgba(0, 0, 0, 0.15);
-  background-color: aliceblue;
 }
