--- a/front/src/pages/styles/FxratePage.css
+++ b/front/src/pages/styles/FxratePage.css
@@ -1,17 +1,34 @@
-.fxrate-container {
-  height: 80vh;
-  margin-top: 5%;
-  padding: 5%;
-  border-radius: 20px;
+.fxrateContainer {
+  position: absolute;
+  height: 92%;
+  width: 100%;
+  bottom: 0;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
   /* background-color: #c6d5ff; */
-  background-color: #ebecf0;
+  background-color: #c6d5ff;
+}
+.fxrateBox1 {
+  padding-left: 5%;
+  padding-top: 5%;
+}
+.fxrateTitle {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-bottom: 2%;
 }
 
-.discount-box {
-  width: 100%;
-  padding: 2%;
+.discountBox {
+  /* width: 100%; */
   border-radius: 20px;
-  background-color: aliceblue;
+}
+.krwAmountWrapper {
+  margin-top: 5%;
+}
+.krwInput {
+  border: none;
+  height: 2rem;
+  border-radius: 10px;
 }
 
 .fxratepush {
@@ -20,6 +37,7 @@
   background-color: yellow;
   border-radius: 10px;
 }
+
 .fxratebtn {
   background-color: yellow;
   border-radius: 10px;
