--- a/front/src/components/FxratePage/Fxrate.css
+++ b/front/src/components/FxratePage/Fxrate.css
@@ -36,7 +36,9 @@
 
 .datepicker {
   margin: 5%;
-  border-radius: 20px;
+  border-radius: 10px;
+  height: 2rem;
   border: none;
   text-align: center;
+  width: 10rem;
 }
