--- a/front/src/components/FxratePage/Fxratepush.css
+++ b/front/src/components/FxratePage/Fxratepush.css
@@ -1,13 +1,13 @@
 #currencySelect {
-  border-radius: 20px;
+  border-radius: 10px;
   text-align: center;
   background-color: #fff;
   margin: 2%;
-  height: auto;
-  width: 40vw;
+  height: 2rem;
+  width: 40%;
   overflow-y: scroll;
   border: none;
-  height: 1.4rem;
+  width: 10.3rem;
 }
 
 #currencySelect option {
