--- a/front/src/pages/styles/FxratePage.css
+++ b/front/src/pages/styles/FxratePage.css
@@ -11,11 +11,16 @@
 .fxrateBox1 {
   padding-left: 5%;
   padding-top: 5%;
+  padding-right: 5%;
 }
 .fxrateTitle {
   font-size: 1.5rem;
   font-weight: bold;
   padding-bottom: 2%;
+}
+
+.fxrateTitle span {
+  color: red;
 }
 
 .discountBox {
@@ -93,4 +98,24 @@
 .fxrateLink {
   display: flex;
   justify-content: center;
+}
+
+#currencySelect {
+  border-radius: 10px;
+  text-align: center;
+  background-color: #fff;
+  margin: 2%;
+  height: 2rem;
+  width: 40%;
+  overflow-y: scroll;
+  border: none;
+  width: 10.3rem;
+}
+
+#currencySelect option {
+  width: 10%;
+  height: 1%;
+  font-size: 0.5rem;
+  padding: 0;
+  min-height: 0.5em;
 }
