--- a/front/src/components/MyCalendar/MyCalendar.css
+++ b/front/src/components/MyCalendar/MyCalendar.css
@@ -2,7 +2,7 @@
   background-color: #f0f0f0;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 40px;
   text-align: center;
 }
 
@@ -14,7 +14,7 @@
 
 .my-calendar .react-calendar {
   border: 1px solid black;
-  font-size: 20px;
+  font-size: 22px;
   color: black;
 }
 
@@ -73,4 +73,8 @@
 .my-calendar th {
   background-color: #f0f0f0;
   color: #333;
+}
+
+.my-calendar .react-calendar__navigation__label {
+  font-size: 13px;
 }
