--- a/front/src/pages/styles/ConsumeLogPage.css
+++ b/front/src/pages/styles/ConsumeLogPage.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 .CompareGraphWrapper {
@@ -15,16 +15,16 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 10%;
+  margin-top: 0%;
 }
 
 .ShowCalendarButton {
   display: block;
   margin: 0 auto;
-  padding: 10px 20px;
+  padding: 5px 10px;
   background-color: transparent;
-  color: white;
-  border: 2px solid white;
+  color: black;
+  border: 2px solid black;
   border-radius: 5px;
   cursor: pointer;
 }
