--- a/front/src/pages/styles/ConsumeLogPage.css
+++ b/front/src/pages/styles/ConsumeLogPage.css
@@ -23,8 +23,7 @@
   margin: 0 auto;
   padding: 5px 10px;
   background-color: transparent;
-  color: black;
-  border: 2px solid black;
+  color: rgb(255, 255, 255);
   border-radius: 5px;
   cursor: pointer;
 }
