--- a/front/src/pages/styles/BankLocationPage.css
+++ b/front/src/pages/styles/BankLocationPage.css
@@ -1,5 +1,8 @@
 .mapCard {
   color: white;
+  display: flex;
+}
+.Mybutton {
 }
 
 .box {
@@ -17,8 +20,20 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .title {
   margin-left: 1rem;
+}
+
+.locationWrapper {
+  display: flex;
+}
+
+.locationWrapper a {
+  text-decoration: none;
+  font-size: 2.2rem;
+  margin-top: 0.3rem;
 }
