--- a/front/src/components/FavoritePlacePage/FavoriteModal.css
+++ b/front/src/components/FavoritePlacePage/FavoriteModal.css
@@ -6,8 +6,8 @@
   background-color: #c6d5ff;
   border-radius: 20px 20px 0 0; */
   position: absolute;
-  bottom: -60%;
-  height: 60%;
+  bottom: -52%;
+  height: 52%;
   width: 100%;
   background-color: #c6d5ff;
   border-top-left-radius: 20px;
@@ -21,9 +21,22 @@
 .favortieModalContainer.show {
   bottom: 0; /* 최종 위치를 위로 설정 */
 }
+.favortieModalContainer.fullScreen {
+  height: 96%;
+  bottom: 0;
+}
+.favortieModalContainerMiddle {
+  position: absolute;
+  bottom: 0;
+  height: 52%;
+  width: 100%;
+  background-color: #c6d5ff;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
 .favoriteModalLine {
   width: 50%;
-  height: 2%;
+  height: 5px;
   background-color: #6f96ff;
   position: absolute;
   left: 25%;
@@ -34,6 +47,7 @@
   height: 80%;
   width: 100%;
   display: flex;
+  /* margin-top: 5%; */
   justify-content: center;
   flex-direction: column;
   justify-content: flex-start;
@@ -43,5 +57,11 @@
 .favoriteModalTitle {
   font-size: 1.2rem;
   padding-top: 8%;
+  padding-bottom: 1%;
   text-align: center;
 }
+
+/* .favoriteModalMore {
+  position: relative;
+  right: 0;
+} */
