--- a/front/src/pages/styles/FavoritePlacePage.css
+++ b/front/src/pages/styles/FavoritePlacePage.css
@@ -8,7 +8,7 @@
 .tagContainer {
   height: 30%;
   position: relative;
-  top: 7%;
+  top: 8%;
   /* margin-top: 10%; */
 
   /* display: flex;
@@ -41,8 +41,8 @@
   color: #fff;
   position: absolute;
   left: 5%;
-  font-size: 1.1rem;
   height: 1rem;
+  /* padding-bottom: 5%; */
 }
 .tag-div {
   display: flex;
