fix: api 안되는 문제 해결

--- a/front/src/pages/styles/FxratePage.css
+++ b/front/src/pages/styles/FxratePage.css
@@ -22,7 +22,9 @@
 .fxrateTitle span {
   color: red;
 }
-
+.fxrateMoney {
+  padding-top: 3%;
+}
 .discountBox {
   /* width: 100%; */
   border-radius: 20px;
