--- a/front/src/pages/styles/LoginPage.css
+++ b/front/src/pages/styles/LoginPage.css
@@ -3,10 +3,16 @@
 }
 
 .logincontainer {
-  width: 100%;
-  height: 80%;
+  position: relative;
+  left: 5%;
+  /* top: 10%; */
+  top: 5%;
+  width: 90%;
+  height: 60%;
   display: flex;
   justify-content: center;
   /* align-items: center; */
   margin-top: 20%;
+  border-radius: 50px;
+  border: 0.25rem solid #fff;
 }
