--- a/front/src/pages/styles/ConsumeLogPage.css
+++ b/front/src/pages/styles/ConsumeLogPage.css
@@ -1,13 +1,20 @@
 .ConsumeLog {
-  color: white;
+  /* color: white; */
+  background-color: #c7d6ff;
+  width: 100%;
+  height: 85%;
+  bottom: 0;
+  position: absolute;
+  overflow-y: scroll;
+  /* overflow-y: hidden; */
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
-
 .CompareCircleWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 5%;
 }
 
 .CompareGraphWrapper {
@@ -23,7 +30,16 @@
   margin: 0 auto;
   padding: 5px 10px;
   background-color: transparent;
-  color: rgb(255, 255, 255);
+  /* color: rgb(255, 255, 255); */
+  color: #fff;
   border-radius: 5px;
   cursor: pointer;
+  border: 2px solid #fff;
+}
+
+.compoareTitle {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
