--- a/front/src/components/StudentIdPage/StudentId.css
+++ b/front/src/components/StudentIdPage/StudentId.css
@@ -60,3 +60,33 @@
   align-items: center;
   font-size: large;
 }
+.toggle-button {
+  width: 40px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 25px;
+  cursor: pointer;
+  position: absolute;
+  right: 5%;
+  top: 5%;
+  z-index: 10;
+}
+
+.toggle-button.toggled {
+  background-color: #4caf50;
+}
+
+.toggle-circle {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background-color: white;
+  border-radius: 50%;
+  transition: left 0.2s;
+}
+
+.toggle-button.toggled .toggle-circle {
+  left: 22px;
+}
