--- a/front/src/pages/styles/ConsumeLogPage.css
+++ b/front/src/pages/styles/ConsumeLogPage.css
@@ -43,3 +43,7 @@
   padding-top: 2%;
   padding-bottom: 2%;
 }
+.recharts-tooltip-wrapper
+  recharts-tooltip-wrapper-right
+  recharts-tooltip-wrapper-bottom {
+}
